# Guacamole

./: .gitignore  .gitmodules  README.md
.claude/: settings.local.json
.github/workflows/: claude.yml
CustomEngine/: CMakeLists.txt  main.cpp
CustomEngine/Assets/Models/: Bomb.fbx  GeneralAnimated.fbx  Miner.fbx
CustomEngine/Assets/Shaders/: BasicFragment.frag  BasicVertex.vert  GizmosVertex.vert  PickingShader.frag  SkinnedVertex.vert
CustomEngine/Editor/: EditorMacro.h  EditorRegistry.h  EditorStyle.cpp  EditorStyle.h  EditorWindow.cpp  EditorWindow.h  EditorWindowRegistry.h  SelectedEntity.cpp  SelectedEntity.h
CustomEngine/Editor/ComponentEditor/: AnimatorEditor.cpp  AnimatorEditor.h  AudioSourceEditor.cpp  AudioSourceEditor.h  CameraEditor.cpp  CameraEditor.h  ComponentEditor.cpp  ComponentEditor.h  DirectionalLightEditor.cpp  DirectionalLightEditor.h  LightEditor.cpp  LightEditor.h  MeshFilterEditor.cpp  MeshFilterEditor.h  MeshRendererEditor.cpp  MeshRendererEditor.h  PointLightEditor.cpp  PointLightEditor.h  SkinnedMeshRendererEditor.cpp  SkinnedMeshRendererEditor.h  TransformEditor.cpp  TransformEditor.h
CustomEngine/Editor/ConsoleWindow/: ConsoleWindow.cpp  ConsoleWindow.h
CustomEngine/Editor/InspectorWindow/: InspectorWindow.cpp  InspectorWindow.h
CustomEngine/Editor/MenuBar/: MenuBar.cpp  MenuBar.h
CustomEngine/Editor/ScenegraphEditor/: ScenegraphEditor.cpp  ScenegraphEditor.h
CustomEngine/src/: CMakeLists.txt  main.cpp
CustomEngine/src/Animations/: Animation.cpp  Animation.h  AnimationSystem.cpp  AnimationSystem.h  Animator.cpp  Animator.h  Skeleton.cpp  Skeleton.h
CustomEngine/src/Assets/: Asset.h  Material.cpp  Material.h  Model.cpp  Model.h  Shader.cpp  Shader.h  ShaderSource.h  Texture2D.cpp  Texture2D.h
CustomEngine/src/Audio/: AudioClip.cpp  AudioClip.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  GuacAudio.cpp  GuacAudio.h
CustomEngine/src/ECS/: Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  Component.cpp  Component.h  ComponentMacros.h  Entity.cpp  Entity.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h  PrimitiveFactory.cpp  PrimitiveFactory.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h  Transform.cpp  Transform.h  TransformGizmoDrawer.cpp  TransformGizmoDrawer.h  TransformSystem.cpp  TransformSystem.h  TransformUtils.h
CustomEngine/src/ECS/Camera/: CameraController.cpp  CameraController.h  CameraSystem.cpp  CameraSystem.h
CustomEngine/src/EventSystem/: Debug.cpp  Debug.h
CustomEngine/src/Gizmos/: GizmoDrawerRegistry.h  GizmoLine.h  GizmoRendererSystem.cpp  GizmoRendererSystem.h  Gizmos.cpp  Gizmos.h  IGizmoDrawer.h
CustomEngine/src/Importers/: AnimationImporter.cpp  AnimationImporter.h  AssetImporterRegistry.cpp  AssetImporterRegistry.h  AudioClipImporter.cpp  AudioClipImporter.h  IAssetImporter.h  ModelImporter.cpp  ModelImporter.h  ModelInstantiator.cpp  ModelInstantiator.h  Resources.cpp  Resources.h  ShaderImporter.cpp  ShaderImporter.h  Texture2DImporter.cpp  Texture2DImporter.h
CustomEngine/src/Input/: AxisControll.cpp  AxisControll.h  ButtonControll.cpp  ButtonControll.h  IInputDevice.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Key.h  Keyboard.cpp  Keyboard.h  KeyboardInputDevice.cpp  KeyboardInputDevice.h  Mouse.cpp  Mouse.h  MouseInputDevice.cpp  MouseInputDevice.h
CustomEngine/src/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
CustomEngine/src/ModelImporter/: Asset.h  AssetImporterRegistry.cpp  AssetImporterRegistry.h  IAssetImporter.h  Material.h  Model.cpp  ModelImporter.cpp  ModelImporter.h  ModelInstantiator.cpp  ModelInstantiator.h  Resources.cpp  Shader.cpp  Shader.h  ShaderImporter.cpp  ShaderImporter.h  ShaderSource.h
CustomEngine/src/Physics/: BoxCollider.cpp  BoxCollider.h  BoxColliderGizmoDrawer.cpp  BoxColliderGizmoDrawer.h  Collider.cpp  Collider.h  ColliderGizmoDrawer.cpp  ColliderGizmoDrawer.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h  SphereCollider.cpp  SphereCollider.h  SphereColliderGizmoDrawer.cpp  SphereColliderGizmoDrawer.h
CustomEngine/src/Physics/Editor/: ColliderEditor.cpp  ColliderEditor.h  RigidBodyEditor.cpp  RigidBodyEditor.h
CustomEngine/src/Scenegraph/: Scenegraph.cpp  Scenegraph.h
CustomEngine/src/Selection/: SelectionSystem.cpp  SelectionSystem.h
CustomEngine/src/Shaders/: basicFragment.frag  basicVertex.vert
CustomEngine/src/Systems/: System.h  SystemManager.cpp  SystemManager.h
CustomEngine/src/Time/: Time.cpp  Time.h
CustomEngine/src/Utilities/: ObjectSelection.h  PickingFramebuffer.cpp  PickingFramebuffer.h  PickingSystem.cpp  PickingSystem.h
CustomEngine/x64/Debug/: CustomEngine.exe.recipe  vc143.idb
